; ModuleID = '/home/carl/AnghaBench/zfs/module/zfs/extr_ddt.c_ddt_decompress.c'
source_filename = "/home/carl/AnghaBench/zfs/module/zfs/extr_ddt.c_ddt_decompress.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32, i32 (i32*, i8*, i64, i64, i32)* }

@DDT_COMPRESS_FUNCTION_MASK = common dso_local global i32 0, align 4
@zio_compress_table = common dso_local global %struct.TYPE_3__* null, align 8
@DDT_COMPRESS_BYTEORDER_MASK = common dso_local global i32 0, align 4
@ZFS_HOST_BYTEORDER = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ddt_decompress(i32* %0, i8* %1, i64 %2, i64 %3) #0 {
  %5 = alloca i32*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i64, align 8
  %8 = alloca i64, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca %struct.TYPE_3__*, align 8
  store i32* %0, i32** %5, align 8
  store i8* %1, i8** %6, align 8
  store i64 %2, i64* %7, align 8
  store i64 %3, i64* %8, align 8
  %12 = load i32*, i32** %5, align 8
  %13 = getelementptr inbounds i32, i32* %12, i32 1
  store i32* %13, i32** %5, align 8
  %14 = load i32, i32* %12, align 4
  store i32 %14, i32* %9, align 4
  %15 = load i32, i32* %9, align 4
  %16 = load i32, i32* @DDT_COMPRESS_FUNCTION_MASK, align 4
  %17 = and i32 %15, %16
  store i32 %17, i32* %10, align 4
  %18 = load %struct.TYPE_3__*, %struct.TYPE_3__** @zio_compress_table, align 8
  %19 = load i32, i32* %10, align 4
  %20 = sext i32 %19 to i64
  %21 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %18, i64 %20
  store %struct.TYPE_3__* %21, %struct.TYPE_3__** %11, align 8
  %22 = load %struct.TYPE_3__*, %struct.TYPE_3__** %11, align 8
  %23 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %22, i32 0, i32 1
  %24 = load i32 (i32*, i8*, i64, i64, i32)*, i32 (i32*, i8*, i64, i64, i32)** %23, align 8
  %25 = icmp ne i32 (i32*, i8*, i64, i64, i32)* %24, null
  br i1 %25, label %26, label %38

26:                                               ; preds = %4
  %27 = load %struct.TYPE_3__*, %struct.TYPE_3__** %11, align 8
  %28 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %27, i32 0, i32 1
  %29 = load i32 (i32*, i8*, i64, i64, i32)*, i32 (i32*, i8*, i64, i64, i32)** %28, align 8
  %30 = load i32*, i32** %5, align 8
  %31 = load i8*, i8** %6, align 8
  %32 = load i64, i64* %7, align 8
  %33 = load i64, i64* %8, align 8
  %34 = load %struct.TYPE_3__*, %struct.TYPE_3__** %11, align 8
  %35 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %34, i32 0, i32 0
  %36 = load i32, i32* %35, align 8
  %37 = call i32 %29(i32* %30, i8* %31, i64 %32, i64 %33, i32 %36)
  br label %43

38:                                               ; preds = %4
  %39 = load i32*, i32** %5, align 8
  %40 = load i8*, i8** %6, align 8
  %41 = load i64, i64* %8, align 8
  %42 = call i32 @bcopy(i32* %39, i8* %40, i64 %41)
  br label %43

43:                                               ; preds = %38, %26
  %44 = load i32, i32* %9, align 4
  %45 = load i32, i32* @DDT_COMPRESS_BYTEORDER_MASK, align 4
  %46 = and i32 %44, %45
  %47 = icmp ne i32 %46, 0
  %48 = zext i1 %47 to i32
  %49 = load i64, i64* @ZFS_HOST_BYTEORDER, align 8
  %50 = icmp ne i64 %49, 0
  %51 = zext i1 %50 to i32
  %52 = icmp ne i32 %48, %51
  br i1 %52, label %53, label %57

53:                                               ; preds = %43
  %54 = load i8*, i8** %6, align 8
  %55 = load i64, i64* %8, align 8
  %56 = call i32 @byteswap_uint64_array(i8* %54, i64 %55)
  br label %57

57:                                               ; preds = %53, %43
  ret void
}

declare dso_local i32 @bcopy(i32*, i8*, i64) #1

declare dso_local i32 @byteswap_uint64_array(i8*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
